Implement lazy loading for video autoplay

--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             <div class="hero-video">
                 <div class="video-wrapper">
                     <!-- YouTube Video -->
-                    <iframe src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0"
+                    <iframe class="lazy-video" src="about:blank"
+                        data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -162,7 +163,8 @@
                     </ul>
                 </div>
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=5"
+                    <iframe class="lazy-video" src="about:blank"
+                        data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=5"
                         title="Step 1 Video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -185,7 +187,8 @@
                     </ul>
                 </div>
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=70"
+                    <iframe class="lazy-video" src="about:blank"
+                        data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=70"
                         title="Step 2 Video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -207,7 +210,8 @@
                     </ul>
                 </div>
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=144"
+                    <iframe class="lazy-video" src="about:blank"
+                        data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=144"
                         title="Step 3 Video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
@@ -230,7 +234,8 @@
                     </ul>
                 </div>
                 <div class="video-wrapper">
-                    <iframe src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=195"
+                    <iframe class="lazy-video" src="about:blank"
+                        data-src="https://www.youtube.com/embed/Q-RmwcYpya0?autoplay=1&mute=1&controls=1&rel=0&start=195"
                         title="Step 4 Video" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
