Update form label and configure Telegram bot

--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
 
                     <!-- STEP 3: Contacts -->
                     <div class="quiz-step" id="step3" style="display: none;">
-                        <h3 class="mb-20">Куда отправить стратегию?</h3>
+                        <h3 class="mb-20">Как с вами связаться?</h3>
                         <input id="name" type="text" placeholder="Ваше Имя" required
                             style="width: 100%; padding: 15px; background: #000; border: 1px solid #333; color: #fff; margin-bottom: 15px; border-radius: 8px;">
                         <input id="phone" type="tel" placeholder="Телефон / Telegram" required
