SEO Optimization and Favicon

--- a/cases.html
+++ b/cases.html
@@ -4,7 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Архив Результатов | LOOPS</title>
+    <title>Архив Результатов | Кейсы LOOPS | Реальные цифры</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Посмотрите реальные кейсы внедрения Системы Перелидоза. Результаты в нишах автобизнеса, недвижимости, B2B и услуг. Отрицаем магию, показываем цифры: ROI, CPL, Выручка.">
+    <meta name="keywords"
+        content="кейсы маркетинга, примеры автоворонок, результаты внедрения ИИ, кейсы таргет, loops результаты">
+    <link rel="canonical" href="https://loops.uz/cases.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://loops.uz/cases.html">
+    <meta property="og:title" content="Архив Результатов | Кейсы LOOPS">
+    <meta property="og:description"
+        content="Как наши клиенты делают X3 к выручке с помощью ИИ и таргета. Читайте подробные разборы.">
+    <meta property="og:image" content="https://loops.uz/images/og-cases.jpg">
+
+    <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
