--- a/index.html
+++ b/index.html
@@ -4,7 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Система Перелидоза | Таргет + ИИ Бот</title>
+    <title>Система Перелидоза | Таргет + ИИ Бот | Автоматизация Продаж</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Автоматизируйте продажи с помощью ИИ-агентов и таргетированной рекламы. Система Перелидоза - это квалификация лидов 24/7, рост конверсии и снижение стоимости заявки.">
+    <meta name="keywords"
+        content="ИИ бот, автоворонка, таргет, автоматизация продаж, CRM, чат-бот для бизнеса, квалификация лидов">
+    <link rel="canonical" href="https://loops.uz/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://loops.uz/">
+    <meta property="og:title" content="Система Перелидоза | Таргет + ИИ Бот">
+    <meta property="og:description"
+        content="Получайте теплые заявки 24/7. Бот сам квалифицирует лидов и продает, пока ваши менеджеры спят.">
+    <meta property="og:image" content="https://loops.uz/images/og-main.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://loops.uz/">
+    <meta property="twitter:title" content="Система Перелидоза | Таргет + ИИ Бот">
+    <meta property="twitter:description" content="Получайте теплые заявки 24/7. Бот сам квалифицирует лидов и продает.">
+    <meta property="twitter:image" content="https://loops.uz/images/og-main.jpg">
+
+    <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
