--- a/cases/case-rebar.html
+++ b/cases/case-rebar.html
@@ -4,17 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Кейс: Композитная Арматура - LOOPS</title>
+    <title>Кейс: Оптовые Продажи Арматуры | ROI 400% | LOOPS</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description"
+        content="Кейс внедрения автоворонки для производителя композитной арматуры. Как мы автоматизировали квалификацию B2B лидов, отсеяли нецелевые звонки и получили окупаемость 400%.">
+    <meta name="keywords"
+        content="B2B маркетинг кейс, продажа стройматериалов, автоматизация отдела продаж, CRM для производства, квалификация лидов">
+    <link rel="canonical" href="https://loops.uz/cases/case-rebar.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://loops.uz/cases/case-rebar.html">
+    <meta property="og:title" content="Кейс: Оптовые Продажи Арматуры | ROI 400%">
+    <meta property="og:description"
+        content="Автоматическая квалификация оптовых покупателей. Читать кейс внедрения LOOPS.">
+    <meta property="og:image" content="https://loops.uz/images/case-rebar-og.jpg">
+
     <!-- CASE METADATA -->
     <meta name="case-category" content="b2b">
     <meta name="case-niche" content="Производство / B2B">
     <meta name="case-title" content="Композитная Арматура">
     <meta name="case-desc" content="Квалификация оптовых покупателей на автомате.">
-    <meta name="case-image" content="https://placehold.co/600x400/222/555?text=Composite+Rebar">
-    <meta name="case-stat-1-val" content="ROI 400%">
-    <meta name="case-stat-1-label" content="Окупаемость">
-    <meta name="case-stat-2-val" content="$250k">
-    <meta name="case-stat-2-label" content="Сумма Сделки">
+
+    <link rel="icon" href="../images/favicon.jpg" type="image/jpeg">
     <link rel="stylesheet" href="../css/style.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;600;800&family=Inter:wght@300;400;500&display=swap"
@@ -35,11 +48,63 @@
             <div class="breadcrumbs mb-40">
                 <a href="../index.html">Главная</a> <span class="sep">></span>
                 <a href="../cases.html">Кейсы</a> <span class="sep">></span>
-                <span class="current">Композитная Арматура</span>
+                <span class="current">Производство Арматуры</span>
             </div>
 
-            <h1 class="mb-40">КЕЙС: КОМПОЗИТНАЯ АРМАТУРА</h1>
-            <p>Описание кейса: Производство и B2B продажи.</p>
+            <!-- Case Header -->
+            <h1 class="mb-40">КЕЙС: АВТОМАТИЗАЦИЯ B2B ПРОДАЖ АРМАТУРЫ</h1>
+
+            <div class="case-stats-grid mb-60"
+                style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; text-align: center; background: rgba(255,255,255,0.05); padding: 30px; border-radius: 20px; border: 1px solid rgba(255,255,255,0.1);">
+                <div>
+                    <div style="font-size: 32px; font-weight: 800; color: var(--accent);">400%</div>
+                    <div style="font-size: 14px; color: var(--text-muted);">ROI (Окупаемость)</div>
+                </div>
+                <div>
+                    <div style="font-size: 32px; font-weight: 800; color: #fff;">$250k</div>
+                    <div style="font-size: 14px; color: var(--text-muted);">Сумма Сделок</div>
+                </div>
+                <div>
+                    <div style="font-size: 32px; font-weight: 800; color: #fff;">0 мин</div>
+                    <div style="font-size: 14px; color: var(--text-muted);">На холодные звонки</div>
+                </div>
+            </div>
+
+            <!-- Content Body (SEO Rich Text) -->
+            <article class="case-content" style="max-width: 800px; margin: 0 auto; line-height: 1.6; font-size: 18px;">
+                <h2 class="mb-20">Проблема: Спам и мелкие розничные заказы</h2>
+                <p class="mb-40">
+                    Клиент — завод по производству композитной арматуры. Основная проблема заключалась в том, что
+                    менеджеры тратили 80% времени на обработку звонков от частников, которым нужно "10 метров арматуры
+                    на дачу". Крупные оптовые покупатели терялись в потоке или не могли дозвониться.
+                </p>
+
+                <h2 class="mb-20">Решение: Квалифицирующий Бот LOOPS</h2>
+                <p class="mb-40">
+                    Мы внедрили систему, которая перехватывала входящий трафик. Вместо прямой связи с менеджером, клиент
+                    попадал в WhatsApp/Telegram бота, который задавал 3 ключевых вопроса:
+                    <br>1. Какой объем вам нужен?
+                    <br>2. Вы физлицо или строительная компания?
+                    <br>3. Город доставки?
+                </p>
+
+                <h2 class="mb-20">Результаты</h2>
+                <p>
+                    Система автоматически отсеяла 60% нецелевых лидов. Менеджеры стали получать только готовые заявки с
+                    объемом от 1км арматуры. Это позволило сократить штат отдела продаж вдвое, при этом увеличив
+                    выручку.
+                </p>
+
+                <div
+                    style="margin-top: 60px; padding: 40px; background: var(--accent); color: #000; border-radius: 20px; text-align: center;">
+                    <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
+                    <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
+                    </p>
+                    <a href="../index.html#footer" class="btn"
+                        style="background: #000; color: #fff; border: none;">Получить Расчет</a>
+                </div>
+            </article>
+
         </div>
     </section>
 
