Add Customer Journey Block, AI Chat Interface, and Backend API

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <meta property="twitter:image" content="https://loops.uz/images/og-main.jpg">
 
     <link rel="icon" href="images/favicon.jpg" type="image/jpeg">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -96,6 +97,198 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- CUSTOMER JOURNEY (NEW) -->
+    <section class="section journey" id="journey">
+        <div class="container">
+            <h2 class="text-center mb-60" data-aos="fade-up">ПУТЬ ВАШЕГО КЛИЕНТА</h2>
+
+            <div class="journey-grid">
+                <!-- SVG Connecting Lines (Absolute) -->
+                <svg class="journey-lines" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Lines will be drawn here via CSS/JS or static responsive SVG -->
+                    <path class="j-line d-none d-md-block" d="M200 100 L 400 100" stroke="rgba(250, 193, 77, 0.3)"
+                        stroke-width="2" stroke-dasharray="5,5" fill="none" />
+                </svg>
+
+                <!-- Step 01 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="100">
+                    <div class="j-step">01</div>
+                    <div class="j-icon">
+                        <!-- Traffic Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="9" cy="7" r="4"></circle>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                        </svg>
+                    </div>
+                    <h3>Трафик</h3>
+                    <div class="j-subtitle">Стабильный поток</div>
+                    <p>Настройка рекламы, которая ежедневно генерирует поток целевых обращений.</p>
+                </div>
+
+                <!-- Step 02 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="200">
+                    <div class="j-step">02</div>
+                    <div class="j-icon">
+                        <!-- Speed Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <circle cx="12" cy="12" r="10"></circle>
+                            <polyline points="12 6 12 12 16 14"></polyline>
+                        </svg>
+                    </div>
+                    <h3>Скорость</h3>
+                    <div class="j-subtitle">Моментальный ответ</div>
+                    <p>ИИ-агент вступает в диалог за секунды. Ни один клиент не уйдет к конкуренту.</p>
+                </div>
+
+                <!-- Step 03 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="300">
+                    <div class="j-step">03</div>
+                    <div class="j-icon">
+                        <!-- Filter Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <polygon points="22 3 2 3 10 12.46 10 19 14 21 14 12.46 22 3"></polygon>
+                        </svg>
+                    </div>
+                    <h3>Фильтр</h3>
+                    <div class="j-subtitle">Умный скоринг</div>
+                    <p>Система сама отделяет целевых клиентов от "пустых" запросов.</p>
+                </div>
+
+                <!-- Step 04 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="400">
+                    <div class="j-step">04</div>
+                    <div class="j-icon">
+                        <!-- Warmup Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M14 9V5a3 3 0 0 0-3-3l-4 9v11h11.28a2 2 0 0 0 2-1.7l1.38-9a2 2 0 0 0-2-2.3zM7 22H4a2 2 0 0 1-2-2v-7a2 2 0 0 1 2-2h3">
+                            </path>
+                        </svg>
+                    </div>
+                    <h3>Прогрев</h3>
+                    <div class="j-subtitle">Авто-догрев</div>
+                    <p>Бот напоминает о себе и отправляет материалы тем, кто не купил сразу.</p>
+                </div>
+
+                <!-- Step 05 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="500">
+                    <div class="j-step">05</div>
+                    <div class="j-icon">
+                        <!-- Handshake Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M20.2 7.8l-7.7 7.7a.9.9 0 0 1-1.3 0L7.5 11.8a.9.9 0 0 1 0-1.3l2.2-2.2"></path>
+                            <path d="M16 11l4 4"></path>
+                            <path d="M2 22h20"></path>
+                            <path d="M4 22V10a2 2 0 0 1 2-2h3"></path>
+                        </svg>
+                    </div>
+                    <h3>Стыковка</h3>
+                    <div class="j-subtitle">Передача в ОП</div>
+                    <p>Менеджеры получают готового, "теплого" клиента с полной историей.</p>
+                </div>
+
+                <!-- Step 06 -->
+                <div class="journey-card" data-aos="fade-up" data-aos-delay="600">
+                    <div class="j-step">06</div>
+                    <div class="j-icon">
+                        <!-- Order Icon -->
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                            <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
+                        </svg>
+                    </div>
+                    <h3>Порядок</h3>
+                    <div class="j-subtitle">Интеграция с CRM</div>
+                    <p>Автоматическая выгрузка данных. Полная прозрачность и контроль.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- AI CHAT DEMO (NEW) -->
+    <section class="section chat-section" id="chat-demo">
+        <div class="container chat-layout">
+            <!-- Left: Text -->
+            <div class="chat-text" data-aos="fade-right">
+                <h2>ПРОВЕРЬ МОЩЬ ИИ В ДЕЛЕ</h2>
+                <div class="chat-badges">
+                    <span class="chat-badge">⚡️ Мгновенный ответ</span>
+                    <span class="chat-badge">🧠 Умный диалог</span>
+                </div>
+                <p class="mb-40" style="font-size: 18px; line-height: 1.6;">
+                    Попробуйте пообщаться с нашим демо-агентом прямо сейчас.
+                    Напишите любой вопрос, например: <br>
+                    <span class="text-accent">"Сколько стоит внедрение?"</span> или <span class="text-accent">"Как это
+                        работает?"</span>
+                </p>
+                <div class="arrow-hint d-none d-md-block">
+                    ⤵️ Попробуйте написать здесь
+                </div>
+            </div>
+
+            <!-- Right: Interactive Chat Interface -->
+            <div class="chat-interface glass-panel" data-aos="fade-left">
+                <!-- Chat Header -->
+                <div class="chat-header">
+                    <div class="chat-avatar">
+                        <div class="avatar-img">
+                            <!-- Helper Bot Icon -->
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2"
+                                stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 2a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2 2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z"></path>
+                                <path d="M12 22a2 2 0 0 1 2-2v-2a2 2 0 0 1-2-2 2 2 0 0 1-2 2v2a2 2 0 0 1 2 2z"></path>
+                                <path d="M20 12a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2 2 2 0 0 1 2-2h2a2 2 0 0 1 2 2z"></path>
+                                <path d="M6 12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2 2 2 0 0 1 2-2h2a2 2 0 0 1 2 2z"></path>
+                                <path d="M12 7v10"></path>
+                            </svg>
+                        </div>
+                        <div class="status-dot"></div>
+                    </div>
+                    <div class="chat-info">
+                        <div class="chat-name">AI Consultant</div>
+                        <div class="chat-status">Online</div>
+                    </div>
+                </div>
+
+                <!-- Chat Messages -->
+                <div class="chat-messages" id="chatMessages">
+                    <!-- Initial Welcome Message -->
+                    <div class="message ai-msg">
+                        <div class="msg-bubble">
+                            Привет! 👋 Я ИИ-консультант Loops. Готов ответить на ваши вопросы о нашей системе.
+                        </div>
+                        <div class="msg-time">Just now</div>
+                    </div>
+                </div>
+
+                <!-- Chat Input -->
+                <div class="chat-input-area">
+                    <div class="typing-indicator" id="typingIndicator" style="display: none;">
+                        <span></span><span></span><span></span>
+                    </div>
+                    <form id="chatForm" onsubmit="handleChatSubmit(event)">
+                        <input type="text" id="chatInput" placeholder="Введите сообщение..." autocomplete="off">
+                        <button type="submit" class="send-btn">
+                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="22" y1="2" x2="11" y2="13"></line>
+                                <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+                            </svg>
+                        </button>
+                    </form>
                 </div>
             </div>
         </div>
@@ -637,6 +830,14 @@
     </div>
 
     <script src="js/cases-data.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            once: true,
+            duration: 800,
+            offset: 50
+        });
+    </script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             if (!window.casesData) return;
