--- a/index.html
+++ b/index.html
@@ -245,21 +245,14 @@
                 <div class="chat-header">
                     <div class="chat-avatar">
                         <div class="avatar-img">
-                            <!-- Helper Bot Icon -->
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#000" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M12 2a2 2 0 0 1 2 2v2a2 2 0 0 1-2 2 2 2 0 0 1-2-2V4a2 2 0 0 1 2-2z"></path>
-                                <path d="M12 22a2 2 0 0 1 2-2v-2a2 2 0 0 1-2-2 2 2 0 0 1-2 2v2a2 2 0 0 1 2 2z"></path>
-                                <path d="M20 12a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2 2 2 0 0 1 2-2h2a2 2 0 0 1 2 2z"></path>
-                                <path d="M6 12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2 2 2 0 0 1 2-2h2a2 2 0 0 1 2 2z"></path>
-                                <path d="M12 7v10"></path>
-                            </svg>
+                            <img src="images/daniil.jpg" alt="Даниил"
+                                style="width: 100%; height: 100%; object-fit: cover;">
                         </div>
                         <div class="status-dot"></div>
                     </div>
                     <div class="chat-info">
-                        <div class="chat-name">AI Consultant</div>
-                        <div class="chat-status">Online</div>
+                        <h3>Даниил</h3>
+                        <span>Loops Founder</span>
                     </div>
                 </div>
 
