feat: unified header/footer, interactive menu, mobile fixes

--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
 
     <header>
         <div class="container header-inner" style="justify-content: center;">
-            <div class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</div>
+            <div class="brand-container">
+                <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <div class="brand-menu">
+                    <a href="cases.html">Кейсы</a>
+                    <a href="#modules">Контент</a>
+                    <a href="#lead-form">Контакты</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -70,7 +77,7 @@
                 </p>
 
                 <div class="hero-actions">
-                    <a href="#footer" class="btn">Внедрить Систему</a>
+                    <a href="#lead-form" class="btn">Внедрить Систему</a>
 
                     <!-- Trust Grid (Restored & Updated) -->
                     <div class="hero-trust-grid">
@@ -551,7 +558,7 @@
                         <li class="unavailable">Разработка баннеров: Дизайн + Продающий текст</li>
                         <li class="unavailable">Запуск и управление рекламой (Meta Ads)</li>
                     </ul>
-                    <a href="#footer" class="btn"
+                    <a href="#lead-form" class="btn"
                         style="background: transparent; border: 1px solid var(--accent); color: var(--accent); width: 100%;">ВНЕДРИТЬ
                         СИСТЕМУ</a>
                 </div>
@@ -587,7 +594,7 @@
                         <li class="unavailable">Разработка жестких регламентов и скриптов для менеджеров</li>
                         <li class="unavailable">Глубокий аудит отдела маркетинга и всех активностей</li>
                     </ul>
-                    <a href="#footer" class="btn"
+                    <a href="#lead-form" class="btn"
                         style="width: 100%; box-shadow: 0 0 20px rgba(250, 193, 77, 0.4);">ВНЕДРИТЬ СИСТЕМУ</a>
                 </div>
 
@@ -693,7 +700,8 @@
     </section>
 
     <!-- FOOTER -->
-    <footer class="footer" id="footer">
+    <!-- LEADS FORM SECTION -->
+    <section class="footer" id="lead-form">
         <div class="container footer-grid">
             <div class="footer-info">
                 <div style="margin-top: 40px;">
@@ -811,6 +819,14 @@
                     </div>
                 </form>
             </div>
+        </div>
+    </section>
+
+    <!-- GLOBAL GLASS FOOTER -->
+    <footer class="site-footer">
+        <div class="container">
+            <a href="index.html" class="footer-logo">LOOPS</a>
+            <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
