--- a/cases.html
+++ b/cases.html
@@ -43,7 +43,13 @@
     <!-- HEADER -->
     <header>
         <div class="container header-inner" style="justify-content: center;">
-            <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+            <div class="brand-container">
+                <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <div class="brand-menu">
+                    <a href="index.html#modules">Контент</a>
+                    <a href="index.html#lead-form">Контакты</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -91,7 +97,7 @@
             <div class="bento-cta">
                 <h2>Станете нашим<br><span class="text-accent">следующим кейсом?</span></h2>
                 <p>Давайте обсудим, как получить такие же результаты в вашем проекте.</p>
-                <a href="index.html#footer" class="btn btn-primary"
+                <a href="index.html#lead-form" class="btn btn-primary"
                     style="padding: 18px 40px; font-size: 16px;">Оставить заявку</a>
             </div>
 
@@ -174,10 +180,8 @@
         <!-- GLOBAL GLASS FOOTER -->
         <footer class="site-footer">
             <div class="container">
-                <!-- Left: Monochrome Logo -->
-                <a href="index.html" class="footer-logo">
-                    LOOPS
-                </a>
+                <a href="index.html" class="footer-logo">LOOPS</a>
+                <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
             </div>
         </footer>
 
