--- a/cases/case-izzy.html
+++ b/cases/case-izzy.html
@@ -27,7 +27,14 @@
 
     <header>
         <div class="container header-inner" style="justify-content: center;">
-            <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+            <div class="brand-container">
+                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <div class="brand-menu">
+                    <a href="../cases.html">Кейсы</a>
+                    <a href="../index.html#modules">Контент</a>
+                    <a href="../index.html#lead-form">Контакты</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -102,7 +109,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🛴</div>
                     <h3>Нужен взрывной рост?</h3>
                     <p class="text-muted">Разработаем стратегию масштабирования для вашего сервиса.</p>
-                    <a href="../index.html#footer" class="btn btn-full"
+                    <a href="../index.html#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
@@ -157,9 +164,10 @@
         </div>
     </section>
 
-    <footer class="footer" id="footer" style="margin-top: 100px;">
-        <div class="container text-center">
-            <p style="color: var(--text-muted);">© 2026 LOOPS SYSTEM. All rights reserved.</p>
+            <footer class="site-footer">
+        <div class="container">
+            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
 
