--- a/cases/case-rebar.html
+++ b/cases/case-rebar.html
@@ -39,7 +39,14 @@
 
     <header>
         <div class="container header-inner" style="justify-content: center;">
-            <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+            <div class="brand-container">
+                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <div class="brand-menu">
+                    <a href="../cases.html">Кейсы</a>
+                    <a href="../index.html#modules">Контент</a>
+                    <a href="../index.html#lead-form">Контакты</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -100,7 +107,7 @@
                     <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
                     <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
                     </p>
-                    <a href="../index.html#footer" class="btn"
+                    <a href="../index.html#lead-form" class="btn"
                         style="background: #000; color: #fff; border: none;">Получить Расчет</a>
                 </div>
             </article>
@@ -109,6 +116,12 @@
     </section>
 
     <script src="../js/script.js"></script>
+    <footer class="site-footer">
+        <div class="container">
+            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
+        </div>
+    </footer>
 </body>
 
 </html>
