--- a/cases/clinic.html
+++ b/cases/clinic.html
@@ -26,7 +26,14 @@
 
     <header>
         <div class="container header-inner" style="justify-content: center;">
-            <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+            <div class="brand-container">
+                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <div class="brand-menu">
+                    <a href="../cases.html">Кейсы</a>
+                    <a href="../index.html#modules">Контент</a>
+                    <a href="../index.html#lead-form">Контакты</a>
+                </div>
+            </div>
         </div>
     </header>
 
@@ -44,6 +51,12 @@
     </section>
 
     <script src="../js/script.js"></script>
+    <footer class="site-footer">
+        <div class="container">
+            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
+        </div>
+    </footer>
 </body>
 
 </html>
