feat: implement Useful Materials section, redesign articles, and sync image paths

--- a/cases/case-chery.html
+++ b/cases/case-chery.html
@@ -30,8 +30,8 @@
             <div class="brand-container">
                 <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../cases.html">Кейсы</a>
-                    <a href="../index.html#modules">Контент</a>
+                    <a href="../articles.html">Полезное</a>
+                    <a href="../index.html">Главная</a>
                     <a href="../index.html#lead-form">Контакты</a>
                 </div>
             </div>
@@ -43,7 +43,7 @@
         <div class="container">
             <div class="breadcrumbs mb-40">
                 <a href="../index.html">Главная</a> <span class="sep">></span>
-                <a href="../cases.html">Кейсы</a> <span class="sep">></span>
+                <a href="../articles.html">Полезное</a> <span class="sep">></span>
                 <span class="current">Chery</span>
             </div>
 
