--- a/cases/case-rebar.html
+++ b/cases/case-rebar.html
@@ -42,8 +42,8 @@
             <div class="brand-container">
                 <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../cases.html">Кейсы</a>
-                    <a href="../index.html#modules">Контент</a>
+                    <a href="../articles.html">Полезное</a>
+                    <a href="../index.html">Главная</a>
                     <a href="../index.html#lead-form">Контакты</a>
                 </div>
             </div>
@@ -54,7 +54,7 @@
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
                 <a href="../index.html">Главная</a> <span class="sep">></span>
-                <a href="../cases.html">Кейсы</a> <span class="sep">></span>
+                <a href="../articles.html">Полезное</a> <span class="sep">></span>
                 <span class="current">Производство Арматуры</span>
             </div>
 
