--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
                     <a href="cases.html">Кейсы</a>
-                    <a href="#modules">Контент</a>
+                    <a href="articles.html">Контент</a>
                     <a href="#lead-form">Контакты</a>
                 </div>
             </div>
