--- a/cases/case-rebar.html
+++ b/cases/case-rebar.html
@@ -11,11 +11,11 @@
         content="Кейс внедрения автоворонки для производителя композитной арматуры. Как мы автоматизировали квалификацию B2B лидов, отсеяли нецелевые звонки и получили окупаемость 400%.">
     <meta name="keywords"
         content="B2B маркетинг кейс, продажа стройматериалов, автоматизация отдела продаж, CRM для производства, квалификация лидов">
-    <link rel="canonical" href="https://loops.uz/cases/case-rebar.html">
+    <link rel="canonical" href="https://loops.uz/cases/case-rebar">
 
     <!-- Open Graph -->
     <meta property="og:type" content="article">
-    <meta property="og:url" content="https://loops.uz/cases/case-rebar.html">
+    <meta property="og:url" content="https://loops.uz/cases/case-rebar">
     <meta property="og:title" content="Кейс: Оптовые Продажи Арматуры | ROI 400%">
     <meta property="og:description"
         content="Автоматическая квалификация оптовых покупателей. Читать кейс внедрения LOOPS.">
@@ -40,11 +40,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles.html">Полезное</a>
-                    <a href="../index.html">Главная</a>
-                    <a href="../index.html#lead-form">Контакты</a>
+                    <a href="../articles">Полезное</a>
+                    <a href="../index">Главная</a>
+                    <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -53,8 +53,8 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="../index.html">Главная</a> <span class="sep">></span>
-                <a href="../articles.html">Полезное</a> <span class="sep">></span>
+                <a href="../index">Главная</a> <span class="sep">></span>
+                <a href="../articles">Полезное</a> <span class="sep">></span>
                 <span class="current">Производство Арматуры</span>
             </div>
 
@@ -107,7 +107,7 @@
                     <h3 style="margin-bottom: 20px;">Хотите такой же результат в B2B?</h3>
                     <p style="margin-bottom: 30px;">Оставьте заявку, и мы рассчитаем окупаемость системы для вашей ниши.
                     </p>
-                    <a href="../index.html#lead-form" class="btn"
+                    <a href="../index#lead-form" class="btn"
                         style="background: #000; color: #fff; border: none;">Получить Расчет</a>
                 </div>
             </article>
@@ -118,7 +118,7 @@
     <script src="../js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <a href="../index" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
