--- a/articles.html
+++ b/articles.html
@@ -11,11 +11,11 @@
         content="Полезные статьи о маркетинге, автоматизации продаж и внедрении ИИ. Читайте разборы технологий и гиды по масштабированию бизнеса от экспертов LOOPS.">
     <meta name="keywords"
         content="маркетинг блог, автоматизация бизнеса статьи, ИИ в продажах, как увеличить ROI, полезные материалы loops">
-    <link rel="canonical" href="https://loops.uz/articles.html">
+    <link rel="canonical" href="https://loops.uz/articles">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://loops.uz/articles.html">
+    <meta property="og:url" content="https://loops.uz/articles">
     <meta property="og:title" content="Полезные Материалы | Блог LOOPS">
     <meta property="og:description"
         content="Как масштабировать бизнес с помощью технологий. Полезные статьи и разборы.">
@@ -44,11 +44,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="cases.html">Кейсы</a>
-                    <a href="index.html">Главная</a>
-                    <a href="index.html#lead-form">Контакты</a>
+                    <a href="cases">Кейсы</a>
+                    <a href="index">Главная</a>
+                    <a href="index#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="container text-center">
             <!-- Breadcrumbs -->
             <div class="breadcrumbs mb-20">
-                <a href="index.html">Главная</a> <span class="sep">></span> <span class="current">Полезные
+                <a href="index">Главная</a> <span class="sep">></span> <span class="current">Полезные
                     материалы</span>
             </div>
 
@@ -99,8 +99,8 @@
             <div class="bento-cta">
                 <h2>Станете нашим<br><span class="text-accent">следующим кейсом?</span></h2>
                 <p>Давайте обсудим, как получить такие же результаты в вашем проекте.</p>
-                <a href="index.html#lead-form" class="btn btn-primary"
-                    style="padding: 18px 40px; font-size: 16px;">Оставить заявку</a>
+                <a href="index#lead-form" class="btn btn-primary" style="padding: 18px 40px; font-size: 16px;">Оставить
+                    заявку</a>
             </div>
 
             <!-- Right: Widget Grid -->
@@ -178,7 +178,7 @@
     <!-- GLOBAL GLASS FOOTER -->
     <footer class="site-footer">
         <div class="container">
-            <a href="index.html" class="footer-logo">LOOPS</a>
+            <a href="index" class="footer-logo">LOOPS</a>
             <div class="footer copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
