--- a/cases.html
+++ b/cases.html
@@ -11,11 +11,11 @@
         content="Посмотрите реальные кейсы внедрения Системы Перелидоза. Результаты в нишах автобизнеса, недвижимости, B2B и услуг. Отрицаем магию, показываем цифры: ROI, CPL, Выручка.">
     <meta name="keywords"
         content="кейсы маркетинга, примеры автоворонок, результаты внедрения ИИ, кейсы таргет, loops результаты">
-    <link rel="canonical" href="https://loops.uz/cases.html">
+    <link rel="canonical" href="https://loops.uz/cases">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://loops.uz/cases.html">
+    <meta property="og:url" content="https://loops.uz/cases">
     <meta property="og:title" content="Архив Результатов | Кейсы LOOPS">
     <meta property="og:description"
         content="Как наши клиенты делают X3 к выручке с помощью ИИ и таргета. Читайте подробные разборы.">
@@ -44,11 +44,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="articles.html">Полезное</a>
-                    <a href="index.html">Главная</a>
-                    <a href="index.html#lead-form">Контакты</a>
+                    <a href="articles">Полезное</a>
+                    <a href="index">Главная</a>
+                    <a href="index#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="container text-center">
             <!-- Breadcrumbs -->
             <div class="breadcrumbs mb-20">
-                <a href="index.html">Главная</a> <span class="sep">></span> <span class="current">Кейсы</span>
+                <a href="index">Главная</a> <span class="sep">></span> <span class="current">Кейсы</span>
             </div>
 
             <!-- Headline -->
@@ -98,8 +98,8 @@
             <div class="bento-cta">
                 <h2>Станете нашим<br><span class="text-accent">следующим кейсом?</span></h2>
                 <p>Давайте обсудим, как получить такие же результаты в вашем проекте.</p>
-                <a href="index.html#lead-form" class="btn btn-primary"
-                    style="padding: 18px 40px; font-size: 16px;">Оставить заявку</a>
+                <a href="index#lead-form" class="btn btn-primary" style="padding: 18px 40px; font-size: 16px;">Оставить
+                    заявку</a>
             </div>
 
             <!-- Right: Widget Grid -->
@@ -181,7 +181,7 @@
         <!-- GLOBAL GLASS FOOTER -->
         <footer class="site-footer">
             <div class="container">
-                <a href="index.html" class="footer-logo">LOOPS</a>
+                <a href="index" class="footer-logo">LOOPS</a>
                 <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
             </div>
         </footer>
