--- a/cases/case-basalt.html
+++ b/cases/case-basalt.html
@@ -28,11 +28,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles.html">Полезное</a>
-                    <a href="../index.html">Главная</a>
-                    <a href="../index.html#lead-form">Контакты</a>
+                    <a href="../articles">Полезное</a>
+                    <a href="../index">Главная</a>
+                    <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -42,8 +42,8 @@
     <section class="section case-hero-section">
         <div class="container">
             <div class="breadcrumbs mb-40">
-                <a href="../index.html">Главная</a> <span class="sep">></span>
-                <a href="../articles.html">Полезное</a> <span class="sep">></span>
+                <a href="../index">Главная</a> <span class="sep">></span>
+                <a href="../articles">Полезное</a> <span class="sep">></span>
                 <span class="current">Basalt</span>
             </div>
 
@@ -112,7 +112,7 @@
                     <div style="font-size: 30px; margin-bottom: 15px;">🚀</div>
                     <h3>Хотите такой же результат?</h3>
                     <p class="text-muted">Мы бесплатно разберем вашу ситуацию и предложим стратегию.</p>
-                    <a href="../index.html#lead-form" class="btn btn-full"
+                    <a href="../index#lead-form" class="btn btn-full"
                         style="width: 100%; text-align: center; padding: 12px;">Оставить заявку</a>
                 </div>
 
@@ -173,7 +173,7 @@
 
             <footer class="site-footer">
         <div class="container">
-            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <a href="../index" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
