--- a/cases/case-estate.html
+++ b/cases/case-estate.html
@@ -27,11 +27,11 @@
     <header>
         <div class="container header-inner" style="justify-content: center;">
             <div class="brand-container">
-                <a href="../index.html" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
+                <a href="../index" class="brand-title">СИСТЕМА ПЕРЕЛИДОЗА</a>
                 <div class="brand-menu">
-                    <a href="../articles.html">Полезное</a>
-                    <a href="../index.html">Главная</a>
-                    <a href="../index.html#lead-form">Контакты</a>
+                    <a href="../articles">Полезное</a>
+                    <a href="../index">Главная</a>
+                    <a href="../index#lead-form">Контакты</a>
                 </div>
             </div>
         </div>
@@ -40,8 +40,8 @@
     <section class="section">
         <div class="container" style="padding-top: 100px;">
             <div class="breadcrumbs mb-40">
-                <a href="../index.html">Главная</a> <span class="sep">></span>
-                <a href="../articles.html">Полезное</a> <span class="sep">></span>
+                <a href="../index">Главная</a> <span class="sep">></span>
+                <a href="../articles">Полезное</a> <span class="sep">></span>
                 <span class="current">Premium Garden</span>
             </div>
 
@@ -53,7 +53,7 @@
     <script src="../js/script.js"></script>
     <footer class="site-footer">
         <div class="container">
-            <a href="../index.html" class="footer-logo">LOOPS</a>
+            <a href="../index" class="footer-logo">LOOPS</a>
             <div class="footer-copyright">© 2026 LOOPS SYSTEM. All rights reserved.</div>
         </div>
     </footer>
